--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,14 @@ jobs:
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
 
-    - run: npm install
+    - name: Install dependencies
+      run: npm install
 
     - name: Build application
-    - run: make build
+      run: make build
 
     - name: Test application
-    - run: make test
+      run: make test
 
     - run: npm ci
     - run: npm run build --if-present
