--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: app/server/package-lock.json
-        cache-dependency-path: app/client/package-lock.json
+        #cache-dependency-path: app/client/package-lock.json
 
     - name: Start MongoDB
       uses: supercharge/mongodb-github-action@1.6.0
