--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+      run: npm install --save-dev react-dev-utils
 
     - name: Build application
       run: make build
