--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Install react dependencies
-      run: npm install --save-dev react-dev-utils
+    - run: npm install --save-dev react-dev-utils
+    - run: npm install fs-extra
 
     - name: Build application
       run: make build
