--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,14 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - run: npm install --save-dev react-dev-utils
-    - run: npm install fs-extra
+    - name: Install react dev utils
+      run: npm install --save-dev react-dev-utils
+
+    - name: Install fs-extra
+      run: npm install fs-extra
+
+    - name: Install webpack
+      run: npm install webpack
 
     - name: Build application
       run: make build
