--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
     install:
+      name: Install dependencies
         runs-on: ubuntu-latest
 
         steps:
@@ -35,6 +36,8 @@ jobs:
           run: npm install
 
     build:
+      name: Build server and client
+      needs: install
 
       steps:
         - name: Build server
