--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,11 @@ jobs:
         - name: Test server
           run: |
           cd ./app/server
+          export PORT="3002"
+          export MONGODB_URL="mongodb://localhost:27017/"${{ env.randomString }}
+          export JWT_SECRET=${{ env.randomString }}
           echo "Running server tests"
-          npm run test -- -PORT=3002 -MONGODB_URL=mongodb://localhost:27017/${{ env.randomString }} -JWT_SECRET=${{ env.randomString }}
+          npm run test
 
       # TODO do not invoke make
 
