--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,8 +69,9 @@ jobs:
         - name: Test server
           run: |
           cd ./app/server
-          export PORT="3002"
-          export MONGODB_URL="mongodb://localhost:27017/"${{ env.randomString }}
+          cat dev.env
+          export PORT='3002'
+          export MONGODB_URL='mongodb://localhost:27017/'${{ env.randomString }}
           export JWT_SECRET=${{ env.randomString }}
           echo "Running server tests"
           npm run test
