--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,10 @@ jobs:
           run: |
           cd ./app/server
           cat dev.env
-          export PORT='3002'
-          export MONGODB_URL='mongodb://localhost:27017/'${{ env.randomString }}
-          export JWT_SECRET=${{ env.randomString }}
-          echo "Running server tests"
+          #export PORT='3002'
+          #export MONGODB_URL='mongodb://localhost:27017/'${{ env.randomString }}
+          #export JWT_SECRET=${{ env.randomString }}
+          #echo "Running server tests"
           npm run test
 
       # TODO do not invoke make
