--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,8 @@ jobs:
 
         - name: Generate random string
           run: |
-            echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
+            #echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
+            echo "randomString=W71EBe3iM2yt1i36ugYf0CHEqWppsRY8" >> $GITHUB_ENV
             echo ${{ env.randomString }}
 
         - name: Test server
