--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,9 @@ jobs:
             cd ./app/client
             echo "Running client tests"
             npm run test
-
+##echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
         - name: Generate random string
           run: |
-            #echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
             echo "randomString=W71EBe3iM2yt1i36ugYf0CHEqWppsRY8" >> $GITHUB_ENV
             echo ${{ env.randomString }}
 
