--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
           working-directory: ./app/client
           run: npm install
 
-        - name: Build server
+        - name: Install server dependencies and build
+          working-directory: ./app
           run: |
             rm -rf temp
             echo "Creating temp directory"
@@ -46,10 +47,10 @@ jobs:
             echo "Installing server dependencies"
             cd temp
             npm install --prod --no-audit --no-fund
-            echo "Removing package files"
-            rm -rf ./package*
             echo "Installing jest"
             npm install --save-dev jest
+            echo "Removing package files"
+            rm -rf ./package*
 
         - name: Build client
           run: |
