--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,10 +68,12 @@ jobs:
             npm run test
             cd ../../app/server
             export PORT=3002
-            export MONGODB_URL=mongodb://localhost:27017/${{ env.randomString }}
-            export JWT_SECRET=${{ env.randomString }}
+            export MONGODB_URL=mongodb://localhost:27017/$RANDOM_STRING
+            export JWT_SECRET=$RANDOM_STRING
             echo "Running server tests"
             npm run test
+          env:
+            RANDOM_STRING: $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
 
 # echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
 #rm dev.env
@@ -82,4 +84,4 @@ jobs:
 #ENDOFFILE
 
       # TODO Clean
-      # TODO temp directory for server test?
+      # TODO random string
