--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,9 +59,7 @@ jobs:
             node ./scripts/build.js
 
         - name: Generate random string
-          run: echo "randomString=$RANDOM_STRING" >> $GITHUB_ENV
-          env:
-            RANDOM_STRING: $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
+          run: echo "randomString=$(shell LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
 
         - name: Test client & server
           run: |
