--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,12 +13,6 @@ jobs:
     install-build-test:
         runs-on: ubuntu-latest
 
-        steps:
-        - name: Generate random string
-          run: |
-            echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
-            echo "randomString="$(echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)) >> $GITHUB_ENV
-
         - name: Git checkout
           uses: actions/checkout@v2
 
@@ -61,20 +55,18 @@ jobs:
             echo "Building client"
             node ./scripts/build.js
 
-        - name: Generate random string
-          run: |
-            echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
-            echo "randomString="$(echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)) >> $GITHUB_ENV
-
         - name: Test client & server
           run: |
             cd ./app/client
             echo "Running client tests"
             npm run test
             cd ../../app/server
+            echo "Generating random string"
+            RANDOM_STRING=echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
+            echo "Random string: $RANDOM_STRING"
             export PORT=3002
-            export MONGODB_URL=mongodb://localhost:27017/${{ env.randomString }}
-            export JWT_SECRET=${{ env.randomString }}
+            export MONGODB_URL=mongodb://localhost:27017/$RANDOM_STRING
+            export JWT_SECRET=$RANDOM_STRING
             echo "Running server tests"
             npm run test
 
