--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ on:
 jobs:
     install-build-test:
         runs-on: ubuntu-latest
-
+        
+        steps:
         - name: Git checkout
           uses: actions/checkout@v2
 
