--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,9 @@ jobs:
             node ./scripts/build.js
 
         - name: Generate random random string variable for server testing
-          run: echo RANDOM_STRING='$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)' >> $GITHUB_ENV
+          run: |
+            RANDOM_STRING=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)
+            echo $RANDOM_STRING >> $GITHUB_ENV
 
         - name: Test client & server
           run: |
