--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,10 +57,7 @@ jobs:
             node ./scripts/build.js
 
         - name: Generate random random string variable for server testing
-          run: |
-            which tr
-            which fold
-            echo "RANDOM_STRING=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
+          run: echo "RANDOM_STRING=$(echo $LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
 
         - name: Test client & server
           run: |
@@ -74,14 +71,6 @@ jobs:
             export JWT_SECRET=${{ env.RANDOM_STRING }}
             echo "Running server tests"
             npm run test
-
-# echo "randomString=$(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1)" >> $GITHUB_ENV
-#rm dev.env
-#cat > /dev.env << ENDOFFILE
-#PORT=3002
-#MONGODB_URL=mongodb://localhost:27017/${{ env.randomString }}
-#JWT_SECRET=${{ env.randomString }}
-#ENDOFFILE
 
       # TODO Clean
       # TODO random string
