--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,8 +58,8 @@ jobs:
 
         - name: Generate random string for server testing
           run: |
-            echo $(openssl rand -hex 20)
-            echo "RANDOM_STRING=$(echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1))" >> $GITHUB_ENV
+            echo"RANDOM_STRING=$(echo $(openssl rand -hex 20))" >> $GITHUB_ENV
+      #echo "RANDOM_STRING=$(echo $(LC_ALL=C tr -dc 'a-zA-Z0-9' < /dev/urandom | fold -w 32 | head -n 1))" >> $GITHUB_ENV
 
         - name: Test client & server
           run: |
@@ -67,10 +67,10 @@ jobs:
             echo "Running client tests"
             npm run test
             cd ../../app/server
-            echo "JWT: $echo ${{ steps.jwt-generator.outputs.token }}"
+            echo "JWT: $echo ${{ env.RANDOM_STRING }}"
             export PORT=3002
-            export MONGODB_URL=mongodb://localhost:27017/${{ steps.jwt-generator.outputs.token }}
-            export JWT_SECRET=${{ steps.jwt-generator.outputs.token }}
+            export MONGODB_URL=mongodb://localhost:27017/${{ env.RANDOM_STRING }}
+            export JWT_SECRET=${{ env.RANDOM_STRING }}
             echo "Running server tests"
             npm run test
 
