--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,7 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: fix
+          target: packer.pkr.hcl
 
       # validate templates
       - name: Validate Template
