--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,11 +28,7 @@ jobs:
 
       # build artifact
       - name: Build Artifact
-        uses: hashicorp/packer-github-actions@master
-        with:
-          command: build
-          arguments: "-color=false -on-error=abort"
-          target: packer.pkr.hcl
+        run: packer build packer.pkr.hcl
         env:
           PACKER_LOG: 1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
