--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,8 @@ jobs:
           unset AWS_SECRET_ACCESS_KEY
           unset AWS_SESSION_TOKEN
 
-      - name: Configure AWS Credentials
+      #TODO refresh credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -33,14 +34,22 @@ jobs:
       - name: Packer init
         run: packer init .
 
-      - name: Validate Template
+      - name: Validate packer template
         uses: hashicorp/packer-github-actions@master
         with:
           command: validate
           arguments: -syntax-only
           target: packer.pkr.hcl
 
-      - name: Build Artifact
-        run: packer build packer.pkr.hcl
+      - name: Build artifact
+        run: |
+          packer build packer.pkr.hcl
+          echo "ami_id=$(manifest.json | jq -r '.builds[-1].artifact_id' |  cut -d':' -f2)" >> $GITHUB_ENV
+          echo ${{ env.ami_id }}
 
-      # additional steps to process artifacts
+      - name: Terraform set AMI ID
+        run: |
+          echo "test"
+
+      # TODO: Use ami output for terraform
+      # TODO: SSH into instance and build app with IP and run
